--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,15 @@
 #itemList>tbody>tr>td { vertical-align: middle; }
 .right { text-align: right; }
 
-/* Settings */
-#settingsItemList select.form-control {
-	
+/* Sending */
+#page_sending {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background-color: rgba(255,255,255,1);
+	text-align: center;
+	z-index: 10000;
+	padding-top: 2em;
 }
